rename the interface and class

--- a/HelpWeb/HelpWeb/Views/DBCreater/SQLGenerator.cshtml
+++ b/HelpWeb/HelpWeb/Views/DBCreater/SQLGenerator.cshtml
@@ -4,13 +4,12 @@
 }
 
 @section headSection{
-    <link href="~/Content/layui-v1.0.2/layui/css/layui.css" rel="stylesheet" />
     <style type="text/css">
         #generatorSqlText {
             width: 800px;
             height: 600px;
             resize: none;
-            background-color: #C7EDCC;
+            background-color: #C0C0C0;
             color: black;
         }
 
@@ -27,7 +26,6 @@
 }
 
 @section scripts{
-    <script src="~/Content/layui-v1.0.2/layui/layui.js"></script>
 
     <script>
 
@@ -50,7 +48,7 @@
 <div id="pagebody" style="margin:20px;">
 
     <div class="sqlgenerator-header">
-        <label>生成MySQL建库建表语句</label>
+        <label>生成建库建表语句</label>
         <div class="filediv">
             <input type="file" name="file" lay-type="file" class="layui-upload-file" style="float:right;">
         </div>
