add dbAccess layer

--- a/HelpWeb/HelpWeb/Views/Shared/_Layout.cshtml
+++ b/HelpWeb/HelpWeb/Views/Shared/_Layout.cshtml
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
     <link href="~/Content/layui-v1.0.2/layui/css/layui.css" rel="stylesheet" />
-
+    <link href="~/Content/bootstrap-3.3.5-dist/css/bootstrap-theme.min.css" rel="stylesheet" />
     <style>
         #bodyLeft {
             width: 200px;
@@ -90,6 +90,11 @@
 
     <script src="~/Scripts/jquery-1.8.2.js"></script>
     <script src="~/Content/layui-v1.0.2/layui/layui.js"></script>
+    <script src="~/Scripts/underscore.js"></script>
+    <script src="~/Scripts/sea.js"></script>
+    <script src="~/Scripts/moment.js"></script>
+    <script src="~/Content/bootstrap-3.3.5-dist/js/bootstrap.min.js"></script>
+    <script src="~/Scripts/jquery.plugin.js"></script>
     @RenderSection("scripts", false)
 </body>
 </html>
