角色管理页面完工

--- a/HelpWeb/HelpWeb/Views/RoleInfo/Index.cshtml
+++ b/HelpWeb/HelpWeb/Views/RoleInfo/Index.cshtml
@@ -132,7 +132,7 @@
                             修改
                         </button>
 
-                        <button type="button" class="btn btn-default btn-xs validOperateButton" KeyID="@Model[i].KeyID" IsValid="@Model[i].IsValid" ContractName="@Model[i].RoleName" data-toggle="modal"  data-target="#DialogModal">
+                        <button type="button" class="btn btn-default btn-xs validOperateButton" keyid="@Model[i].KeyID" isvalid="@Model[i].IsValid" rolename="@Model[i].RoleName" rolealias="@Model[i].RoleAlias" data-toggle="modal" data-target="#DialogModal">
                             @if (Model[i].IsValid == 1)
                             {
                                 <span>禁用</span>
