--- a/HelpWeb/HelpWeb/Views/Shared/_Layout.cshtml
+++ b/HelpWeb/HelpWeb/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link href="~/Content/css/layout/layout.css" rel="stylesheet" />
     <link href="~/Content/css/layout/menu.css" rel="stylesheet" />
     <link href="~/Content/css/common/comon-control.css" rel="stylesheet" />
+    <link href="~/Content/layer/skin/default/layer.css" rel="stylesheet" />
+
     @RenderSection("headSection", false)
 </head>
 <body>
